<resources>
    <string name="app_name">TaskTracker</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="employee_email">Employee Email</string>
    <string name="add_task">Add Task</string>
    <string name="view_tasks">View Tasks</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="task_name">Task Name</string>
    <string name="task_status">Task Status</string>
    <string name="create_task">Create Task</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="company_name">Company Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_to_tasktracker">Welcome to TaskTracker!</string>
    <string name="online_status">Online Status</string>
    <string name="sync_tasks">Sync Tasks</string>
    <string name="go_to_tasks">Go to Tasks</string>
    <string name="logout">Logout</string>
    <string name="user_role">User Role</string>
    <string name="go_to_users">GO TO USERS</string>
    <string name="delete_tasks">Delete Tasks</string>
    <string name="create_user">Create User</string>
    <string name="remove_user">Remove User</string>
    <string name="add_user">Add User</string>
    <string name="user_email">User Email</string>
    <string name="back">Back</string>
    <string name="save_user">Save User</string>
    <string name="enter_email">Enter Email</string>
    <string-array name="task_status_array">
        <item>To Do</item>
        <item>In Progress</item>
        <item>Completed</item>
    </string-array>
    <string-array name="register_role_array">
        <item>Manager</item>
        <item>Employee</item>
    </string-array>
</resources>