<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:attr/windowBackground"
    tools:context=".CreateTaskActivity">

    <EditText
        android:id="@+id/etTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/task_title"
        android:inputType="text"
        android:padding="16dp"
        android:background="@drawable/rounded"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/task_description"
        android:inputType="text"
        android:padding="16dp"
        android:background="@drawable/rounded"
        android:layout_marginBottom="8dp" />

    <EditText
        android:id="@+id/etEmployeeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/employee_email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:background="@drawable/rounded"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnAddTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:background="@drawable/rounded"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginBottom="8dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnViewTasks"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded"
        android:text="@string/view_tasks"
        android:layout_marginTop="8dp" />

    <!-- Home Button -->
    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:background="@drawable/rounded"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginTop="8dp" />
</LinearLayout>
