<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="?android:windowBackground"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:background="@drawable/rounded"
        android:layout_marginBottom="16dp"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/etCompanyName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/company_name"
        android:inputType="text"
        android:padding="16dp"
        android:background="@drawable/rounded"
        android:layout_marginBottom="16dp"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"
        android:background="@drawable/rounded"
        android:layout_marginBottom="16dp"
        android:textColor="?android:textColorPrimary"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:background="@drawable/rounded"
        android:layout_marginBottom="32dp"
        android:textColor="?android:textColorPrimary"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/rounded"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:background="@drawable/rounded"
        android:textColor="?attr/colorPrimary"
        android:layout_marginBottom="16dp" />
</LinearLayout>
