<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="?android:attr/windowBackground"
    tools:context=".TaskListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvUsers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentTop="true"
        android:layout_above="@id/btnRemoveUsers"
        android:layout_marginBottom="16dp"
        tools:visibility="visible" />

    <!-- Remove Users Button -->
    <Button
        android:id="@+id/btnRemoveUsers"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnAddUser"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded"
        android:text="@string/remove_user"
        android:visibility="gone" />

    <!-- Add User Button -->
    <Button
        android:id="@+id/btnAddUser"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnHome"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded"
        android:text="@string/add_user" />

    <!-- Home Button -->
    <Button
        android:id="@+id/btnHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded"
        android:backgroundTint="?attr/colorPrimary"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/home" />
</RelativeLayout>
